prevent hover on mobile device

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -161,7 +161,3 @@ textarea {
 #languages-switcher {
   float: right;
 }
-
-.ui-state-focus:hover, .ui-state-focus:active {
-  
-}
